--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.6"
   }
